add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>valeria's world</title>
+    <link rel ="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
+      <nav> 
+        <h1>Valeria's amazing world</h1>
+      <ul id="nav-ul">
+        <li class="nav-li">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="nav-li">
+          <a href="portfolio.html"> Portfolio</a>
+        </li>
+        </ul>
+      </nav>
+      <main> 
+      <div class="sidebar"> 
+        <img class="sidebar- img"
+       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHY6X5NH9lmWjMfawwP2M_uFqRwBAAeigFUw&s">
+      </div>  
+      <div class="content">
+        <h2> Valeria Ramirez </h2>
+        <p> Student at george washington carver</p>
+        <!-- Interests section -->
+        <div id="interests">
+          <h3> Interests</h3>
+          <ul>
+           <li> Drawing</li> 
+           <li> Visiting places</li>
+           <li> Eating</li>
+          </ul>
+        </div>
+      </div>
+      </main>
       
     </div>
   </body>
